demo/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  annotations:
    nginx.org/rewrites: "serviceName=mongo-express-service rewrite=/;"
spec:
  ingressClassName: nginx
  rules:
  - host: express.example.com
    http:
      paths:
      - path: /express/
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port:
              number: 80
